--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,17 @@
 .App {
   text-align: center;
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content:space-evenly;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -28,11 +20,231 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Station-buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.Station-buttons > button {
+  margin: 10px auto;
+  padding: 10px;
+  flex: 1;
+  font-size: 20px;
+  border-radius: 10px;
+  border: 1px solid #61dafb;
+  background-color: #282c34;
+  color: #61dafb;
+  min-width: 75vw;
+}
+
+.Station-buttons > button:disabled {
+  background-color: #c5c5c5;
+  color: #282c34;
+}
+
+.Cancel-button {
+  padding: 10px;
+  border-radius: 2px;
+  border: 1px solid #61dafb;
+  background-color: #282c34;
+  color: #61dafb;
+}
+.Tag-color-buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.Tag-color-buttons > button {
+  margin: 10px auto;
+  padding: 10px;
+  flex: 1;
+  font-size: 20px;
+  border-radius: 10px;
+  min-width: 75vw;
+}
+
+.Tag-button-yellow {
+  background-color: #f5f542;
+  color: #282c34;
+  border: 1px solid #282c34;
+}
+
+.Tag-button-white {
+  background-color: #ffffff;
+  color: #282c34;
+  border-color: #282c34;
+}
+
+.Tag-button-purple {
+  background-color: #a95af5;
+  color: #282c34;
+  border: 1px solid #282c34;
+}
+
+.Tag-button-blue {
+  background-color: #5a9af5;
+  color: #282c34;
+  border: 1px solid #282c34;
+}
+
+.Tag-button-orange {
+  background-color: #f5a95a;
+  color: #282c34;
+  border: 1px solid #282c34;
+}
+
+.Tag-button-pink {
+  background-color: #f55a9a;
+  color: #282c34;
+  border: 1px solid #282c34;
+}
+
+
+.Tag-button-none {
+  background-color: #000000;
+  color: #ffffff;
+  border-color: #282c34;
+}
+
+.Tag-buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+
+.Tag-buttons button {
+  margin: 10px auto;
+  padding: 10px;
+  flex: 1;
+  font-size: 72px;
+  border-radius: 10px;
+  border: 1px solid #61dafb;
+  background-color: #282c34;
+  color: #61dafb;
+  min-width: 75vw;
+}
+
+.Tag-buttons button:disabled {
+  background-color: #c5c5c5;
+  color: #282c34;
+}
+
+
+.Tag-button-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.Tag-button-row > button {
+  min-width: 25vw;
+}
+
+.Tag-display {
+  font-size: 42pt;
+}
+
+.Esquilador-monitor p {
+  font-size: 24pt;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.Esquilador-header {
+    background-color: #c5c8d0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content:space-evenly;
+    font-size: 36pt;
+    color: black;
+}
+
+.Tag-Display-yellow {
+  background-color: #f5f542;
+  color: #282c34;
+  border: 1px solid #282c34;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content:space-evenly;
+  font-size: 24pt;
+}
+
+.Tag-Display-white {
+  background-color: #ffffff;
+  color: #282c34;
+  border-color: #282c34;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content:space-evenly;
+  font-size: 24pt;
+}
+
+.Tag-Display-purple {
+  background-color: #a95af5;
+  color: #282c34;
+  border: 1px solid #282c34;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content:space-evenly;
+  font-size: 24pt;
+}
+
+.Tag-Display-blue {
+  background-color: #5a9af5;
+  color: #282c34;
+  border: 1px solid #282c34;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content:space-evenly;
+  font-size: 24pt;
+}
+
+.Tag-Display-orange {
+  background-color: #f5a95a;
+  color: #282c34;
+  border: 1px solid #282c34;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content:space-evenly;
+  font-size: 24pt;
+}
+
+.Tag-Display-pink {
+  background-color: #f55a9a;
+  color: #282c34;
+  border: 1px solid #282c34;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content:space-evenly;
+  font-size: 24pt;
+}
+
+
+.Tag-Display-none {
+  background-color: #000000;
+  color: #ffffff;
+  border-color: #282c34;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content:space-evenly;
+  font-size: 24pt;
 }
